# pulumi-deltastream

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .upgrade-config.yml  AGENTS.md  COPYRIGHT  Makefile  README.md  go.mod  go.sum  mise.toml  opencode.jsonc  package.json  schema.json
.config/: mise.test.toml  mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.specify/: feature.json  init-options.json  integration.json
docs/: _index.md  installation-configuration.md
examples/: credentials.yaml.example  examples_nodejs_test.go  examples_test.go  go.mod  go_test.go  nodejs_test.go  test_helpers.go
memory/: constitution.md  constitution_update_checklist.md
provider/: application.go  application_test.go  conn.go  database.go  functions.go  go.mod  go.sum  namespace.go  object.go  provider.go  query.go  query_test.go  resources.go  secrets_test.go  store.go  store_kafka.go  store_postgres.go  store_postgres_test.go  store_snowflake.go
scripts/: crossbuild.mk
sdk/: go.mod
sdk/python/: README.md  pyproject.toml
sdk/python/deltastream-pulumi/: README.md  __init__.py  _inputs.py  _utilities.py  database.py  delta_stream_object.py  entity.py  get_database.py  get_databases.py  get_entities.py  get_entity_data.py  get_namespace.py  get_namespaces.py  get_object.py  get_objects.py  get_schema_registries.py  get_schema_registry.py  get_secret.py  get_secrets.py  get_store.py  get_stores.py  namespace.py  outputs.py  provider.py  pulumi-plugin.json  query.py  schema_registry.py  secret.py  store.py
sdk/python/deltastream-pulumi/config/: __init__.pyi  vars.py
(+302 files in other folders)
