[project]
  name = "deltastream-pulumi"
  description = "A Pulumi package for creating and managing DeltaStream cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["deltastream", "category/infrastructure"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.0.2"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.deltastream.io"
    Repository = "https://github.com/deltastreaminc/pulumi-deltastream"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      deltastream-pulumi = ["py.typed", "pulumi-plugin.json"]
